--- a/package.json
+++ b/package.json
@@ -23,7 +23,9 @@
     "url": "https://github.com/Colored-Coins/AssetId.git"
   },
   "dependencies": {
-    "coinstring": "2.3.0",
-    "crypto-hashing": "0.3.1"
+    "bitcoinjs-lib": "2.2.0",
+    "bs58check": "1.0.8",
+    "crypto-hashing": "0.3.1",
+    "debug": "2.2.0"
   }
 }
