--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "url": "https://github.com/Colored-Coins/AssetId.git"
   },
   "dependencies": {
-    "bitcoinjs-lib": "2.2.0",
+    "bitcoinjs-lib": "git://github.com/janko33bd/bitcoinjs-lib.git#nc-blackcoinjs-lib",
     "bs58check": "1.0.8",
     "crypto-hashing": "0.3.1",
     "debug": "2.2.0"
